@@ -2,7 +2,7 @@ AC_REVISION($ Revision: 0.1 $)dnl revision of this configure.in script
 
 AC_INIT(acinclude.m4)
 AM_CONFIG_HEADER(include/config.h)
-AM_INIT_AUTOMAKE(plptools, 0.5)
+AM_INIT_AUTOMAKE(plptools, 0.6)
 AM_PROG_LIBTOOL
 
 dnl Enable Mainatiner stuff
