@@ -1,3 +1,8 @@
+Changes from Version 0.5 to 0.6:
+
+ - Maintenance release: bugfixes in plpnfsd and libs which make
+   the mounted device writable again.
+ 
 Changes from Version 0.4 to 0.5:
 
  - merged all stuff from Matt Gumbley's plptools-0.4-mjg5
